<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="240"
        android:inputType="number"
        android:numeric="integer"
        android:key="study_goal_minutes"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_study_goal_minutes" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="feedback_on"
        android:title="@string/pref_title_feedback" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="do_not_disturb"
        android:title="@string/pref_do_not_disturb" />

    <SwitchPreference
        android:defaultValue="true"
            android:key="detector_accelerometer"
        android:title="@string/pref_title_accelerometer" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="detector_proximity"
        android:title="@string/pref_title_proximity" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="detector_voice"
        android:title="@string/pref_title_voice" />



</PreferenceScreen>